Closed
Bug 1404627
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::dom::SVGGeometryElement::GetOrBuildPath
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | fixed |
People
(Reporter: calixte, Assigned: bas.schouten)
References
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-723606aa-0e17-4258-8afc-bce450170930.
=============================================================
There are 152 crashes in nightly 58 starting with buildid 20170929220356.
This crash was quite rare before this nightly.
All the crash reports have OMTP+ in app notes, so it's probably due to the patch to enable OMTP (bug 1403935).
By the way, it's ranked #11 in nightly top-crashers for content process.
:bas, could you investigate please ?
Flags: needinfo?(bas)
| Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(bas)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8914123 [details]
Bug 1404627: Atomically refcount Path objects for use with OMTP.
https://reviewboard.mozilla.org/r/185448/#review190344
Attachment #8914123 -
Flags: review?(matt.woodrow) → review+
Comment 4•8 years ago
|
||
This is the #3 Windows topcrash in Nightly 20170929220356.
Pushed by bschouten@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8dd8a6654c6d
Atomically refcount Path objects for use with OMTP. r=mattwoodrow
Updated•8 years ago
|
Assignee: nobody → bas
Comment 6•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in
before you can comment on or make changes to this bug.
Description
•