Bug 1404627: Atomically refcount Path objects for use with OMTP. r=mattwoodrow

MozReview-Commit-ID: 2TeLChDL4OY